# rust-pass

./: .gitignore  Cargo.toml  README.md
src/: main.rs
